--- a/client- side/client/package.json
+++ b/client- side/client/package.json
@@ -23,6 +23,7 @@
     "recharts": "^2.5.0",
     "sass": "^1.58.3",
     "styled-components": "^5.3.9",
+    "use-query-params": "^2.2.1",
     "validator": "^13.9.0",
     "web-vitals": "^2.1.4",
     "zxcvbn": "^4.4.2"
