--- a/client- side/client/package.json
+++ b/client- side/client/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
+    "@heroicons/react": "^2.0.18",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.13",
+    "@mui/material": "^5.13.2",
     "@mui/styled-engine-sc": "^5.11.11",
     "@mui/x-data-grid": "^6.2.0",
     "@testing-library/jest-dom": "^5.16.5",
